<resources>
    <string name="app_name">Uimage</string>
    <string name="item_image">item image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retry">retry</string>
    <string name="not_loaded_result">Can\'t loaded results</string>
    <string name="username">username</string>
    <string name="search_query_hint">Search \'Cat\'</string>
    <string name="description">Description</string>
    <string name="text_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="photo_by_unspalsh">Photo by Unspalsh</string>
    <string name="detail_image">Detail Image</string>
    <string name="profile_image">profile image</string>
    <string name="share_button">Share Button</string>
</resources>